--- a/src/app/admin/layouts/navbar/navbar.component.html
+++ b/src/app/admin/layouts/navbar/navbar.component.html
@@ -5,10 +5,7 @@
       <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
     </li>
     <li class="nav-item d-none d-sm-inline-block">
-      <a href="../../index3.html" class="nav-link">Home</a>
-    </li>
-    <li class="nav-item d-none d-sm-inline-block">
-      <a href="#" class="nav-link">Contact</a>
+      <a routerLink="/admin" class="nav-link">Ana Sayfa</a>
     </li>
   </ul>
 
@@ -127,8 +124,8 @@
       </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" data-widget="control-sidebar" data-slide="true" href="#" role="button">
-        <i class="fas fa-th-large"></i>
+      <a class="nav-link" data-widget="control-sidebar" title="Çıkış" data-slide="true" href="#" role="button">
+        <i class="fas fa-power-off text-danger"></i>
       </a>
     </li>
   </ul>
