productgetlist product image product delete search

--- a/src/app/admin/layouts/navbar/navbar.component.html
+++ b/src/app/admin/layouts/navbar/navbar.component.html
@@ -124,7 +124,7 @@
       </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" data-widget="control-sidebar" title="Çıkış" data-slide="true" href="#" role="button">
+      <a class="nav-link" data-widget="control-sidebar" (click)="logout()" title="Çıkış" data-slide="true" href="#" role="button">
         <i class="fas fa-power-off text-danger"></i>
       </a>
     </li>
